# init-mat-and-tensors

using-eigen/build-using-eigen-Desktop_Qt_5_15_2_MSVC2015_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake  using-eigen.ilk
using-eigen/build-using-eigen-Desktop_Qt_5_15_2_MSVC2015_64bit-Debug/.cmake/api/v1/reply/: cache-v2-f6e7a941dc4df6bb606c.json  cmakeFiles-v1-9cfc822e6624228ab5b3.json  codemodel-v2-4c9cd3f3ef5de4ffcf69.json  index-2021-09-25T06-08-46-0948.json  target-using-eigen-Debug-dd13853638dea6b328b5.json
using-eigen/build-using-eigen-Desktop_Qt_5_15_2_MSVC2015_64bit-Release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
using-eigen/build-using-eigen-Desktop_Qt_5_15_2_MSVC2015_64bit-Release/.cmake/api/v1/reply/: cache-v2-5b79b234a2358b4c8734.json  cmakeFiles-v1-043be86a8977199d92ca.json  codemodel-v2-a28ee049ccd2d1c13654.json  index-2021-09-25T06-04-12-0981.json  target-using-eigen-Release-6720b08c390cecaf6dab.json
using-eigen/using-eigen/: CMakeLists.txt  main.cpp
using-shark-ml/build-init-sharkml-Desktop_Qt_5_15_2_MSVC2015_64bit-Release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  init-sharkml.exp  init-sharkml.lib
using-shark-ml/build-init-sharkml-Desktop_Qt_5_15_2_MSVC2015_64bit-Release/.cmake/api/v1/reply/: cache-v2-5f5d2ea90b33cea8844d.json  cmakeFiles-v1-24c69d246fd88375b7dd.json  codemodel-v2-ee27b399230ab437017b.json  (+2 more)
using-shark-ml/init-sharkml/: CMakeLists.txt  main.cpp
